syntax = "proto3";
package product.service;

option go_package = "github.com/jmurtozoev/test-task/proto";

message Product {
    string name = 1;
    float price = 2;
}

message ReadFromCsvRequest {
    string url = 1;
}

message ListProductsResponse {
    repeated Product products = 1;
}

message Nothing {}

