syntax = "proto3";
package product.service;

option go_package = "github.com/jmurtozoev/test-task/proto";

import "google/api/annotations.proto";
import "product.proto";

service ProductService {
    // read products from csv file
    rpc ReadProducts (ReadFromCsvRequest) returns (ReadFromCsvResponse) {
        option (google.api.http) = {
          post: "/v1/products"
          body: "*"
        };
    }

    // list products
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse){
        option (google.api.http).get = "/v1/products";
    }

    // update product
    rpc UpdateProduct (UpdateProductRequest) returns (Product) {
        option (google.api.http) = {
          put: "/v1/products/{id}"
          body: "*"
        };
    }
}